<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">无线遥控器</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_text">设备配对</string>
    <string name="connection_code">序列号(例：MY2S1A1511000001)</string>
    <string name="login_text">连接</string>
    <string name="back_to_mainactivity">返回</string>
    <string name="connection_tip">请输入配对码：</string>
    <string name="serial_tip">谜影设备序列号查看方法：</string>
    <string name="serial_tip_one">1、设置-其他设置-关于设备（序列号）</string>
    <string name="serial_tip_two">1、设置-其他设置-故障反馈（设备序列号）</string>
    <string name="cancel">取消</string>
    <string name="search_title">设备</string>
    <string name="qr_type">类型：</string>
    <string name="qr_result">结果：</string>
    <string name="qr_ok">确定</string>
    <string name="qr_refresh">重新扫描</string>
    <string name="title_select_device">选择设备</string>
    <string name="qr_tip">请将二维码置于取景框内扫描</string>
    <string name="tip_mode1">观影模式</string>
    <string name="tip_mode2">夜间模式</string>
    <string name="tip_mode3">自定义模式1</string>
    <string name="tip_mode4">自定义模式2</string>
    <string name="tip_mode5">自定义模式3</string>
    <string name="tip_mode6">用户模式</string>
    <string name="tip_off">关</string>
    <string name="exit_apllication">Press again to exit the program</string>
    <string name="wrongvalue">Wrong value, Please input again</string>
    <string name="nullvalue">Null value, Please input again</string>
    <string name="check_network_connection">Please check the network connection</string>
    
    <string name="number_one">number one</string>
    <string name="number_two">number two</string>
    <string name="number_three">number three</string>
    <string name="number_four">number four</string>
    <string name="number_five">number five</string>
    <string name="number_six">number six</string>
    <string name="number_seven">number seven</string>
    <string name="number_eight">number eight</string>
    <string name="number_nine">number nine</string>
    <string name="number_zero">number zero</string>
    
    <string name="letter_q_upper">letter q</string>
    <string name="letter_w_upper">letter w</string>
    <string name="letter_e_upper">letter e</string>
    <string name="letter_r_upper">letter r</string>
    <string name="letter_t_upper">letter t</string>
    <string name="letter_y_upper">letter y</string>
    <string name="letter_u_upper">letter u</string>
    <string name="letter_i_upper">letter i</string>
    <string name="letter_o_upper">letter o</string>
    <string name="letter_p_upper">letter p</string>
    
    <string name="letter_a_upper">letter a</string>
    <string name="letter_s_upper">letter s</string>
    <string name="letter_d_upper">letter d</string>
    <string name="letter_f_upper">letter f</string>
    <string name="letter_g_upper">letter g</string>
    <string name="letter_h_upper">letter h</string>
    <string name="letter_j_upper">letter j</string>
    <string name="letter_k_upper">letter k</string>
    <string name="letter_l_upper">letter l</string>
    <string name="symbol_back_to_homepage">back to homepage</string>
    
    <string name="symbol_switch">symbol switch</string>
    <string name="letter_z_upper">letter s</string>
    <string name="letter_x_upper">letter d</string>
    <string name="letter_c_upper">letter f</string>
    <string name="letter_v_upper">letter g</string>
    <string name="letter_b_upper">letter h</string>
    <string name="letter_n_upper">letter j</string>
    <string name="letter_m_upper">letter k</string>
    <string name="symbol_backspace">symbol_backspace</string>
    
    <string name="symbol_special">symbol special</string>
    <string name="symbol_at">symbol at</string>
    <string name="symbol_dotcom">symbol dotcom</string>
    <string name="symbol_space">symbol space</string>
    <string name="symbol_enter">symbol enter</string>
    
    <string name="symbol_dot">symbol dot</string>
    <string name="symbol_comma">symbol comma</string>
    <string name="symbol_colon">symbol colon</string>
    <string name="symbol_single_quote">symbol single quote</string>
    <string name="symbol_semicolon">symbol semicolon</string>
    <string name="symbol_quote">symbol quote</string>
    <string name="symbol_tilde">symbol tilde</string>
    <string name="symbol_vertical_line">symbol vertical line</string>
    <string name="symbol_backslash">symbol backslash</string>
    <string name="symbol_underline">symbol underline</string>
    
    <string name="symbol_pound_sign">symbol pound sign</string>
    <string name="symbol_question_mark">symbol question mark</string>
    <string name="symbol_percent">symbol percent</string>
    <string name="symbol_plus">symbol plus</string>
    <string name="symbol_minus">symbol minus</string>
    <string name="symbol_left_parenthese">symbol left parenthese</string>
    <string name="symbol_right_parenthese">symbol right parenthese</string>
    <string name="symbol_left_bracket">symbol left bracket</string>
    <string name="symbol_right_bracket">symbol right bracket</string>
    <string name="symbol_exclamatory_mark">symbol exclamatory mark</string>
    
    <string name="symbol_equal">symbol equal</string>
    <string name="symbol_left_brace">symbol left brace</string>
    <string name="symbol_right_brace">symbol right brace</string>
    <string name="symbol_left_guillemets">symbol left guillemets</string>
    <string name="symbol_right_guillemets">symbol right guillemets</string>
    
    <string name="dialog_tip">请输入模式名称:</string>

</resources>