<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/match_bg"
    android:gravity="center_horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:scaleType="centerInside"
            android:src="@drawable/bg_scan" />

        <TextView
            android:id="@+id/textview01"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/title_text"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:scaleType="centerInside"
            android:src="@drawable/bg_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview02"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="100dp"
        android:text="@string/connection_tip"
        android:textColor="@color/normal_text"
        android:textSize="20sp" />

    <AutoCompleteTextView
        android:id="@+id/connect_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textview02"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_bg"
        android:completionThreshold="1"
        android:hint="@string/connection_code"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/tip_text" />

    <TextView
        android:id="@+id/infomation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_value"
        android:layout_marginTop="5dp"
        android:textColor="@color/bg_red"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/login_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infomation_label"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_button"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/login_text"
            android:textColor="@drawable/color_connection_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back_to_mainactivity"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_button"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/back_to_mainactivity"
            android:textColor="@drawable/color_connection_button"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_connection"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview02"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/textview01"
            android:text="@string/serial_tip"
            android:textColor="@color/tip_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview02"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/textview01"
            android:text="@string/serial_tip_one"
            android:textColor="@color/tip_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview02"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/textview01"
            android:text="@string/serial_tip_two"
            android:textColor="@color/tip_text"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>